<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/spalsh_screen"
    tools:context=".SplashFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/white_cloud"
        app:layout_constraintStart_toStartOf="@id/guidelineImageLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineImageRight"
        app:layout_constraintTop_toTopOf="@id/guidelineImageTop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineImageBottom"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="@string/weather_matters_n_we_ve_got_the_details"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineImageRight"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@id/guidelineImageLeft"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_n_nitin_patil"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/merriweathersans_regular"
        app:layout_constraintStart_toStartOf="@id/guidelineImageLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineImageRight"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>